k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolkit-app-service
  namespace: default
spec:
  selector:
    app: toolkit-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
